<resources>
    <string name="app_name">Easy Study</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_username_length">Username must be >5 characters</string>
    <string name="invalid_username_content">Allowed symbols: a–z, 0–9, _</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_role">Role</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="invalid_role">Choose role</string>
    <string name="register_failed">Registration failed</string>
    <string name="action_go_sign_up">Don\'t have an account yet?  Sign Up</string>
    <string name="action_go_sign_in">Sign In</string>
    <string name="get_groups_failed">Failed to get group list</string>
    <string name="get_group_details_failed">Failed to get group details</string>
    <string name="attendance">Attendance</string>
    <string name="mark">Mark</string>
    <string name="attendance_yes">Yes</string>
    <string name="attendance_no">No</string>
    <string name="change_mark">Change mark</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="title">Title</string>
    <string name="subject">Subject</string>
    <string name="add_group">Add group</string>
    <string name="add">Add</string>
    <string name="fields_cant_be_empty">Fields can\'t be empty</string>
    <string name="pick_date">Pick date</string>
    <string name="add_lesson">Add lesson</string>
    <string name="add_user">Add user</string>
    <string name="add_student">Add student</string>
    <string name="no_groups">No groups</string>
    <string name="no_lessons">No lessons</string>
    <string name="no_students">No students</string>
    <string name="show_details">Show details</string>
    <string name="logout">Logout</string>
    <string name="teachers">Teachers</string>
    <string name="students">Students</string>
    <string name="lesson">Lesson</string>
    <string name="add_teacher">Add teacher</string>
    <string name="my_groups">My groups</string>
    <string name="empty_string" />
    <string name="invalid_title">Title must be >5 characters</string>
    <string name="create">Create</string>
    <string name="group_creating">Group creating</string>
    <string name="lesson_creating">Lesson creating</string>
    <string name="lessons">Lessons</string>


</resources>